package main

import (
	"coderoot/lesson-03/examples/09-grpc/pb"
	"context"
	"fmt"
	"io"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// UserServiceClient gRPC客户端封装
type UserServiceClient struct {
	conn   *grpc.ClientConn
	client pb.UserServiceClient
}

// NewUserServiceClient 创建新的客户端
func NewUserServiceClient(address string) (*UserServiceClient, error) {
	conn, err := grpc.NewClient(address, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return nil, err
	}
	return &UserServiceClient{
		conn:   conn,
		client: pb.NewUserServiceClient(conn),
	}, nil
}

// Close 关闭客连接
func (c *UserServiceClient) Close() error {
	return c.conn.Close()
}

// GetUser 获取单个用户
func (c *UserServiceClient) GetUser(id int64) (*pb.User, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.GetUserRequest{Id: id}
	user, err := c.client.GetUser(ctx, req)
	if err != nil {
		return nil, err
	}
	return user, nil
}

// CreateUser 创建新用户
func (c *UserServiceClient) CreateUser(username, email string, age int32, tags []string) (*pb.CreateUserResponse, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.CreateUserRequest{
		Username: username,
		Email:    email,
		Age:      age,
		Tags:     tags,
		Metadata: map[string]string{
			"source": "grpc-client",
		},
	}
	resp, err := c.client.CreateUser(ctx, req)
	if err != nil {
		return nil, err
	}
	return resp, nil
}

// ListUsers获取用户列表
func (c *UserServiceClient) ListUsers(page, pageSize int32) (*pb.ListUsersResponse, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.ListUsersRequest{
		Page:     page,
		PageSize: pageSize,
	}
	resp, err := c.client.ListUsers(ctx, req)
	if err != nil {
		return nil, err
	}
	return resp, nil
}

// UpdateUser更新用户
func (c *UserServiceClient) UpdateUser(id int64, usermane, email string, age int32, active bool) (*pb.UpdateUserResponse, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.UpdateUserRequest{
		Id:       id,
		Username: usermane,
		Email:    email,
		Age:      age,
		Active:   active,
	}
	resp, err := c.client.UpdateUser(ctx, req)
	if err != nil {
		return nil, err
	}
	return resp, nil
}

// DeleteUser删除用户
func (c *UserServiceClient) DeleteUser(id int64) (*pb.DeleteUserResponse, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.DeleteUserRequest{Id: id}
	resp, err := c.client.DeleteUser(ctx, req)
	if err != nil {
		return nil, err
	}
	return resp, nil
}

// StreamUses流式获取用户，服务端流
func (c *UserServiceClient) StreamUsers(limit int32, intervalMs int32) error {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	req := &pb.StreamUsersRequest{
		Limit:      limit,
		IntervalMs: intervalMs,
	}
	stream, err := c.client.StreamUsers(ctx, req)
	if err != nil {
		return err
	}
	fmt.Println("==Receiving users stream ===")
	count := 0
	for {
		user, err := stream.Recv()
		if err == io.EOF {
			break
		}
		if err != nil {
			return err
		}
		count++
		fmt.Printf("[%d] User :%s (ID:%d,Email：%s)\n", count, user.Username, user.Id, user.Email)
	}
	fmt.Printf("Total received : %d users \n", count)
	return nil
}

// BatchCreateUsers 批量创建用户（客户端流）
func (c *UserServiceClient) BatchCreateUsers(users []*pb.CreateUserRequest) (*pb.BatchCreateUsersResponse, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()
	stream, err := c.client.BatchCreateUsers(ctx)
	if err != nil {
		return nil, err
	}
	for _, user := range users {
		if err := stream.Send(user); err != nil {
			return nil, err
		}
	}
	// 关闭发送流
	resp, err := stream.CloseAndRecv()
	if err != nil {
		return nil, err
	}
	return resp, nil
}

// ChatUsers双向流，聊天式交互
func (c *UserServiceClient) ChatUsers(messages []string) error {
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()
	stream, err := c.client.ChatUsers(ctx)
	if err != nil {
		return err
	}
	// 启动接收协程
	done := make(chan error, 1)
	go func() {
		for {
			msg, err := stream.Recv()
			if err == io.EOF {
				done <- nil
				return
			}
			if err != nil {
				done <- err
				return
			}
			fmt.Printf("Server:%s (at %s) \n", msg.Message, time.Unix(msg.Timestamp, 0).Format(time.RFC3339))
		}
	}()
	//发送消息
	for i, text := range messages {
		msg := &pb.ChatMessage{
			UserId:    "client",
			Message:   text,
			Timestamp: time.Now().Unix(),
		}
		if err := stream.Send(msg); err != nil {
			return err
		}
		fmt.Printf("Client [%d]: %s \n", i+1, text)
		time.Sleep(500 * time.Millisecond)
	}
	//关闭发送
	if err := stream.CloseSend(); err != nil {
		return err
	}
	//等待接收完成
	return <-done
}

// runClientDemo 运行客户端演示
func runClientDemo(addr string) {
	client, err := NewUserServiceClient(addr)
	if err != nil {
		log.Fatalf("Failed to create client: %v", err)
	}
	defer client.Close()
	fmt.Println("===gPRC Client Demo ===")
	//1 获取用户
	fmt.Println("1. GetUser(ID:1)")
	user, err := client.GetUser(1)
	if err != nil {
		log.Printf("Error:%v", err)
	} else {
		fmt.Printf("  User:%s(ID:%d, email:%s,age:%d) \n", user.Username, user.Id, user.Email, user.Age)
	}
	//2.创建用户
	fmt.Println("2. CreateUser")
	resp, err := client.CreateUser("charlie", "charlie@example.com", 28, []string{"developer"})
	if err != nil {
		log.Printf("Error:%v", err)
	} else {
		fmt.Printf("   %s\n", resp.Message)
		fmt.Printf("   Created user ID: %d \n", resp.User.Id)
	}
	//3. 获取用户列表
	fmt.Println("3. ListUsers (page:1, pageSize:5)")
	listResp, err := client.ListUsers(1, 5)
	if err != nil {
		log.Printf("Error:%v", err)
	} else {
		fmt.Printf("   Total:%d users\n", listResp.Total)
		for _, u := range listResp.Users {
			fmt.Printf("    - %s(ID:%d) \n", u.Username, u.Id)
		}
	}
	//4 更新用户
	fmt.Println("4. updateUSer (ID:1)")
	updateResp, err := client.UpdateUser(1, "alice-update", "alice-update@example.com", 26, true)
	if err != nil {
		log.Printf("Error:%v", err)
	} else {
		fmt.Printf("    %s \n", updateResp.Message)
	}

	//5流式获取用户
	fmt.Println("5. StreamUsers(server streaming)")
	if err := client.StreamUsers(3, 500); err != nil {
		log.Printf("Error:%v", err)
	}
	// 6. 批量创建用户
	fmt.Println("6. BatchCreateUsers(client streaming)")
	batchUsers := []*pb.CreateUserRequest{
		{Username: "david", Email: "david@example.com", Age: 32},
		{Username: "eve", Email: "eve@example.com", Age: 27},
		{Username: "frank", Email: "frank@example.com", Age: 35},
	}
	batchResp, err := client.BatchCreateUsers(batchUsers)
	if err != nil {
		log.Printf("Error: %v", err)
	} else {
		fmt.Printf("    %s\n", batchResp.Message)
		fmt.Printf("    Success:%d, Failed:%d \n", batchResp.SuccessCount, batchResp.FailCount)
	}
	//7 双向流
	fmt.Println("7. ChatUsers (bidirectional streaming)")
	chatMessage := []string{
		"Hello, server!",
		"How are you?",
		"This is a bidirectional stream example.",
	}
	if err := client.ChatUsers(chatMessage); err != nil {
		log.Printf("Error: %v", err)
	}
	fmt.Println("===Demo completed ===")
}
